--- a/src/assets/partials/_mixins.scss
+++ b/src/assets/partials/_mixins.scss
@@ -1,5 +1,5 @@
-@mixin desktop {
-    @media (min-width: #{$desktop-width}) {
+@mixin small-screens-only {
+    @media (min-width: #{$iphone678-width + 1px}) {
         @content;
     }
 }
@@ -10,6 +10,11 @@
 }
 @mixin medium-screens {
     @media (min-width: 513px) and (max-width: #{$desktop-width - 1px} ) {
+        @content;
+    }
+}
+@mixin desktop {
+    @media (min-width: #{$desktop-width}) {
         @content;
     }
 }
